--- a/templates/embed.html
+++ b/templates/embed.html
@@ -21,6 +21,6 @@
 {% block content %}
     <div id="page-content"
          class="transition-all ease-in-out duration-200 flex flex-col min-h-screen items-center align-center p-8 space-y-8">
-        <div class="flex flex-wrap justify-center gap-6 w-full h-full" id="queue"></div>
+        <div class="flex flex-col justify-center gap-6 w-full h-full" id="queue"></div>
     </div>
 {% endblock %}
